--- a/Home.html
+++ b/Home.html
@@ -247,8 +247,7 @@ body, html {
     <form target="_blank" action="mailto:oragon.ent@gmail.com" name="EmailForm" method="POST" enctype="multipart/form-data">
       <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Messages" required name="Message"></p>
       <p>
         <button class="w3-button w3-black" type="submit">
           <i class="fa fa-paper-plane"></i> START 2 MONTHS FREE TRIAL
