--- a/Home.html
+++ b/Home.html
@@ -243,11 +243,11 @@ body, html {
 <!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">START YOUR 2 MONTHS FREE TRIAL!!</h3>
-  <p class="w3-center w3-large">Don't want to pay upfront? Don't worry. We offer a free two-months trial for our new users. Just send us your EMAIL address in the "MESSAGE" section of the email form and we will email you the link to the software. No credit card information needed and no strings attached or extra costs. You have the freedom to pay for the software after the two months if you will be satisfied with the software or choose not to continue using the software if it is not for you.<br>Offer is valid till end of June 2022*.</p>
+  <p class="w3-center w3-large">Don't want to pay upfront? Don't worry. We offer a free two-months trial for our new users. Just send us your EMAIL address through the email form or email us directly to our email address "oragon.ent@gmail.com" and we will email you the link to the software. No credit card information needed. You have the freedom to pay for the software after the two months if you will be satisfied with the software or choose not to continue using the software if it is not for you.<br>Offer is valid till end of July 2022*.</p>
     <form target="_blank" action="mailto:oragon.ent@gmail.com" name="EmailForm" method="POST" enctype="multipart/form-data">
       <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Messages" required name="Message"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Type '2 Months Free Trial' in the email body" required name="Message"></p>
       <p>
         <button class="w3-button w3-black" type="submit">
           <i class="fa fa-paper-plane"></i> START 2 MONTHS FREE TRIAL
