--- a/Home.html
+++ b/Home.html
@@ -121,10 +121,10 @@ body, html {
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="Images/data.JPG" alt="Data" width="700" height="394">
-    </div>
+    </div><br>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="Images/box.JPG" alt="Data" width="700" height="394">
-    </div>
+    </div><br>
     <div class="w3-col m6">
       <br>
       <img class="w3-image w3-round-large" src="Images/hist.JPG" alt="Histogram" width="700" height="394">
